--- a/redmapper_ia_y1.tex
+++ b/redmapper_ia_y1.tex
@@ -185,6 +185,10 @@ Theory and previous results background
 
 \subsection{measuring satellite galaxy distribution orientation}
 
+We quantify the strength of the central galaxy alignment signal with two variables: the position angle difference between the central galaxy and its host cluster $\Delta \eta$, and the central galaxy alignment angle for each central-satellite pair $\theta_{cen}$. They are both defined to lie in the range $[0 \degree, 90 \degree]$, with values closer to $0 \degree$ indicating stronger central galaxy alignment.
+
+Measuring $\Delta \eta$ requires an approximation of the overall cluster shape from the distribution of satellite galaxies.
+
 \subsubsection{method 1}
 
 \subsubsection{method 2}
